--- a/src/style.scss
+++ b/src/style.scss
@@ -23,9 +23,10 @@
         width: 600px;
         border-radius: 20px;
         border: none;
+        padding: 0 20px;
 
-        &::placeholder {
-            padding-left: 10px;
+        &:focus-visible {
+            outline: none;
         }
     }
 
@@ -47,6 +48,7 @@ img, svg {
     border-radius: 20px;
 }
 
+//карточки товара
 .bestsellers {
 
     &__title {
@@ -60,14 +62,102 @@ img, svg {
     }
 
     &__card-container {
+        color:rgb(81, 81, 81);  
+        padding: 15px;
         display: flex;
         align-items: center;
-        justify-content: center;
+        justify-content:space-between;
         flex-direction: column;
         margin-top: 25px;
         width: 200px;
         height: 250px;
         background-color: plum;
+        border-radius: 15px;        
+    }
+
+    &__card-wrapper {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    &__card-view {
+        background-color: aliceblue;
+        margin-top: 100px;
+        border: none;
         border-radius: 10px;
+        color:rgb(81, 81, 81);        
+    }
+
+    &__buy {
+        background-color: aliceblue;
+        border: none;
+        border-radius: 10px;
+        color:rgb(81, 81, 81);   
+    }
+
+    &__card-info {
+        padding-top: 15px;
+    }
+
+    &__card-price {
+        display: flex;
+        justify-content: space-between;
+        font-weight: bold;
+    }
+
+    &__old-price {
+        text-decoration: line-through;
+
     }
 }
+
+//корзина
+.container-basket {
+    display: flex;
+    justify-content: space-between;
+}
+
+.container-summa {
+    font-weight: bold;
+    text-align: end;
+    padding-top: 40px;
+}
+
+.modal-body {
+    display: flex;
+    flex-direction: column;
+}
+
+.btn-primary {
+    background-color: #5b045f;
+
+    &:active {
+        background-color: rgb(122, 29, 99);
+        border: none;  
+        box-shadow: none;   
+    }
+
+    &:focus {
+        background-color: rgb(122, 29, 99);
+        border: none;
+        box-shadow:none;
+    }
+
+    &:focus-visible {
+        background-color: rgb(122, 29, 99);
+        border: none;
+    }
+
+    &:hover {
+        background-color: rgb(122, 29, 99);
+        border: none;
+    }
+    
+}    
+
+.btn-check:focus + .btn, .btn:focus {
+    box-shadow: none;
+}
+
+
