--- a/src/style.scss
+++ b/src/style.scss
@@ -1,5 +1,5 @@
 @import url(./reset.css);
-@import url(./components/cards/cards.js);
+@import url(./components/cards/cards);
 @import "../node_modules/bootstrap/scss/bootstrap";
 
 .header {
