--- a/src/style.scss
+++ b/src/style.scss
@@ -1,5 +1,6 @@
 @import url(./reset.css);
 @import url(./components/cards/cards);
+@import url(./components/basket/basket.scss);
 @import "../node_modules/bootstrap/scss/bootstrap";
 
 .header {
