--- a/src/components/basket/basket.scss
+++ b/src/components/basket/basket.scss
@@ -1,4 +1,27 @@
 .basket {
     display: flex;
     justify-content: space-between;
+    margin-bottom: 5px;
+}
+
+.deleteButton {
+
+    background-color: rgb(105, 105, 105);
+
+    &:active {
+        background-color: rgb(105, 105, 105);
+    }
+
+    &:focus {
+        background-color: rgb(105, 105, 105);
+    }
+
+    &:focus-visible {
+        background-color: rgb(105, 105, 105);
+    }
+
+    &:hover {
+        background-color: rgb(105, 105, 105);
+    }
+
 }
