--- a/src/style.scss
+++ b/src/style.scss
@@ -3,11 +3,35 @@
 @import url(./components/basket/basket.scss);
 @import "../node_modules/bootstrap/scss/bootstrap";
 
+/*@mixin desktop {
+    @media screen and (max-width: 1200px) {
+        @content;
+    }
+}    удалить если не пригодится*/
+
+@mixin laptop {
+    @media screen and (max-width: 992px) {
+        @content;
+    }
+}
+
+@mixin tablets {
+    @media screen and (max-width: 768px) {
+        @content;
+    }
+}
+
 .header {
     background: linear-gradient(to right, rgb(236, 86, 198), purple);
     display: flex;
     justify-content: space-around;
     padding: 50px 0;
+    @include tablets() {
+        flex-direction: column;
+        gap: 20px;
+        align-items: center;
+        padding: 25px 0;
+    }
 
     &__logo {
         text-decoration: none;
@@ -19,6 +43,10 @@
         &:hover {
             color: purple;
         }
+
+        @include laptop() {
+            font-size: 20px;
+        }
     }
 
     &__input {
@@ -29,6 +57,10 @@
 
         &:focus-visible {
             outline: none;
+        }
+
+        @include laptop() {
+            width: 50%;
         }
     }
 
@@ -53,7 +85,7 @@ svg {
 
 .carousel-indicators {
     gap: 20px;
-    margin-bottom: 2rem;
+    margin-bottom: -1rem;
 }
 
 .carousel-indicators [data-bs-target] {
@@ -61,6 +93,16 @@ svg {
     width: 20px;
     height: 20px;
     border-radius: 50%;
+
+    @include laptop() {
+        width: 15px;
+        height: 15px;
+    }
+    
+    @include tablets() {
+        width: 10px;
+        height: 10px;
+    }
 }
 
 //карточки товара
