--- a/src/style.scss
+++ b/src/style.scss
@@ -183,6 +183,7 @@ svg {
 
 .btn-primary {
     background-color: rgb(122, 29, 99);
+    border: none;
 
     &:active {
         background-color: #5b045f;
